--- a/Assignment 1/brandnewstyle.css
+++ b/Assignment 1/brandnewstyle.css
@@ -49,3 +49,35 @@ a {
     text-decoration: none;
     color: saddlebrown;
 }
+
+
+@media only screen and (max-width: 624px) and (orientation: portrait) {
+    body {
+        font-size: 120%;
+        background-color: #F4FFFD;
+    }
+    
+    img {
+        max-width: 25%;
+    }
+}
+
+@media only screen and (max-width: 959px) and (orientation: portrait) {
+    section h1 {
+        font-size: 135%;
+    }
+    section h2 {
+        font-size: 120%;
+    }
+    aside h2 {
+        font-size: 120%;
+    }
+}
+
+@media only screen and (max-width: 767px) and (orientation: landscape) {
+    #nav_menu {
+        display: none;
+    }
+    #mobile_menu {
+        display: block;
+        background-color: #800000 !important;
