--- a/Assignment 1/brandnewstyle.css
+++ b/Assignment 1/brandnewstyle.css
@@ -50,6 +50,13 @@ a {
     color: saddlebrown;
 }
 
+@media only screen and (max-width: 320px) {
+    body {
+        font-size: 80%;
+        display: block;
+        
+    }
+}
 
 @media only screen and (max-width: 624px) and (orientation: portrait) {
     body {
