--- a/Assignment 1/brandnewstyle.css
+++ b/Assignment 1/brandnewstyle.css
@@ -1,11 +1,11 @@
-
 html {
-    background-color: lightgray;
-    font-family: "Times New Roman", serif;
+    background: linear-gradient(#D3D3D3, #3F3F3F);
+    font-family: datalegreyagradient, sans-serif;
 }
 
 h1 {
-    color: midnightblue;
+    color: #191970;
+    text-shadow: 4px 4px 4px #917a91;
 }
 
 h2 {
@@ -13,7 +13,7 @@ h2 {
 }
 
 h3 {
-    color: midnightblue;
+    color: #191970;
 }
 
 body {
@@ -25,8 +25,17 @@ body {
     text-align: center; 
 }
 
-img {
+
+.image1 {
     border: 1px solid darkgray;
+    border-radius: 15px 50px;
+    box-shadow: 5px 5px 2px black;
+    transition: transform 4s;
+}
+
+.image1:hover {
+    -webkit-transform: rotateY(540deg);
+    transform: rotateY(540deg);
 }
 
 li {
@@ -49,6 +58,7 @@ a {
     text-decoration: none;
     color: saddlebrown;
 }
+
 
 @media only screen and (max-width: 320px) {
     body {
