Final Project Update

--- a/Week 10 - Final Project/FinalProject/Views/Home/Index.cshtml
+++ b/Week 10 - Final Project/FinalProject/Views/Home/Index.cshtml
@@ -24,6 +24,17 @@
                         <input type="password" name="password" id="password" />
                         <input type="button" value="Login" id="submit" onclick="validate()" />
                     </form>
+                    <form id="form_2" method="post" name="myform2">
+                        <label>User Name :</label>
+                        <input type="text" name="username2" id="username2" required/>
+                        <label>Password :</label>
+                        <input type="text" name="password2" id="password2" required/>
+                        <label>Email :</label>
+                        <input type="text" name="email" id="email" required/>
+                        <label>Confirm Email :</label>
+                        <input type="text" name="emailConfirm" id="emailConfirm" required />
+                        <input type="button" value="Create Account" id="createAccount" onclick="validate_form()" />
+                    </form>
                 </div>
 
             </div>
