--- a/Week 10 - Final Project/FinalProject/Views/Home/Index.cshtml
+++ b/Week 10 - Final Project/FinalProject/Views/Home/Index.cshtml
@@ -1,47 +1,249 @@
 ﻿@model FinalProject.Models.HomeViewModel
 
-<html>
+<!DOCTYPE html>
 
-    <head>
-        <link href="~/Styles/Home.css" rel="stylesheet" />
-        <title>Final Project</title>
-    </head>
+<html lang="en">
 
-    <body>
-        <header>
-            <script src="~/Scripts/jquery-2.1.1.min.js"></script>
-            <script src="~/Scripts/jquery-ui.min.js"></script>
-            <script src="~/Scripts/Home.js"></script>
-        </header>
-        <main>
-            <div class="container">
+<head>
+   <title>Cuyahoga Community College</title>
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="home.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+</head>
 
-                <div class="main">
-                    <form id="form_id" method="post" name="myform">
-                        <label>User Name :</label>
-                        <input type="text" name="username" id="username" />
-                        <label>Password :</label>
-                        <input type="password" name="password" id="password" />
-                        <input type="button" value="Login" id="submit" onclick="validate()" />
-                    </form>
-                    <form id="form_2" method="post" name="myform2">
-                        <label>User Name :</label>
-                        <input type="text" name="username2" id="username2" required/>
-                        <label>Password :</label>
-                        <input type="text" name="password2" id="password2" required/>
-                        <label>Email :</label>
-                        <input type="text" name="email" id="email" required/>
-                        <label>Confirm Email :</label>
-                        <input type="text" name="emailConfirm" id="emailConfirm" required />
-                        <input type="button" value="Create Account" id="createAccount" onclick="validate_form()" />
-                    </form>
+<body>
+    <h1>Welcome to Cuyahoga Community College Student Services Online</h1>
+    <p>
+        Cuyahoga Community College recognizes students' rights to access personal and academic records in
+        accordance with the Family Educational Rights and Privacy Act of 1974 (FERPA) as amended by Public Law 93-568
+    </p>
+
+    <div class="SectionContent">
+        <div class="SectionLog">
+            <div class="ContainerLog container">
+
+                <div class="row">
+
+                    <div class="col-md-5">
+
+                        <p class="hidden-sm hidden-xs visible-md-block visible-lg-block">
+                            Already have an account with us? <br />Returning users may login by entering <br />their site user name and password
+                        </p>
+                    </div>
+
+                    <div class="col-md-7">
+
+                        <div class="row">
+
+                            <div class="col-md-6">User Name:</div>
+
+                            <div class="col-md-6"><input class="form-control usr-login-txt" type="text" /></div>
+
+                        </div>
+
+                        <br />
+
+                        <div class="row">
+
+                            <div class="col-md-6">Password:</div>
+
+                            <div class="col-md-6"><input class="form-control pass-login-txt" type="password" /></div>
+
+                        </div>
+
+                        <br />
+
+                        <div class="row">
+
+                            <div class="col-md-6">&nbsp;</div>
+
+                            <div class="col-md-6"><input class="btn btn-info btn-right btn-login" type="button" value="Login" /></div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <br />
+
+                <hr />
+
+                <div class="row">
+
+                    <div class="col-md-5">
+
+                        <p class="hidden-sm hidden-xs visible-md-block visible-lg-block">
+                        New user please create a <br />new account by providing us <br />with some basic information
+                        </p>
+
+                    </div>
+
+                    <div class="col-md-7">
+
+                        <div class="row">
+
+                            <div class="col-md-6">User Name:</div>
+
+                            <div class="col-md-6">
+
+                                <input class="form-control usr-txt" type="text" />
+
+                                <label class="errMsg errMsg-username"></label>
+
+                            </div>
+
+                        </div>
+
+                        <br />
+
+                        <div class="row">
+
+                            <div class="col-md-6">Password:</div>
+
+                            <div class="col-md-6">
+
+                                <input class="form-control pass-txt" type="password" />
+
+                                <label class="errMsg errMsg-password"></label>
+
+                            </div>
+
+                        </div>
+
+                        <br />
+
+                        <div class="row">
+
+                            <div class="col-md-6">Email Address:</div>
+
+                            <div class="col-md-6">
+
+                                <input class="form-control email-txt" type="text" />
+
+                                <label class="errMsg errMsg-email"></label>
+
+                            </div>
+
+                        </div>
+
+                        <br />
+
+                        <div class="row">
+
+                            <div class="col-md-6">Repeat Email Address:</div>
+
+                            <div class="col-md-6">
+
+                                <input class="form-control rep-email-txt" type="text" />
+
+                                <label class="errMsg errMsg-rep-email"></label>
+
+                            </div>
+
+                        </div>
+
+                        <br />
+
+                        <div class="row">
+
+                            <div class="col-md-6">&nbsp;</div>
+
+                            <div class="col-md-6"><input class="btn btn-info btn-right btn-create-account" type="button" value="Create Account" /></div>
+
+                        </div>
+
+                    </div>
+
                 </div>
 
             </div>
-        </main>
-        <footer>
 
-        </footer>
-    </body>
+        </div>
+
+        <div class="accountInfoScreen">
+            <div class="containerAccount container">
+                <div class="row">
+                    <div class="col-md-4">Account Name</div>
+                    <div class="col-md-4">Test User</div>
+
+                </div>
+
+                <br />
+
+                <div class="row">
+
+                    <div class="col-md-4">Email Address</div>
+
+                    <div class="col-md-4"><input class="form-control" type="text" /></div>
+
+                    <div class="col-md-4"><input type="button" class="btn btn-info" value="Update" /></div>
+
+                </div>
+
+                <br />
+
+                <div class="row">
+
+                    <div class="col-md-4">Email Address</div>
+
+                    <div class="col-md-4"><input class="form-control" type="text" /></div>
+
+                    <div class="col-md-4"><input type="button" class="btn btn-info" value="Update" /></div>
+
+                </div>
+
+            </div>
+
+            <hr />
+
+            <div class="account-element-add container">
+
+                <div class="row">
+
+                    <div class="col-md-6">ElementName</div>
+
+                    <div class="col-md-6"><input class="form-control" type="text" /></div>
+
+                </div>
+
+                <br />
+
+                <div class="row">
+
+                    <div class="col-md-6">ElementValue</div>
+
+                    <div class="col-md-6"><input class="form-control" type="text" /></div>
+
+                </div>
+
+                <br />
+
+                <div class="row">
+
+                    <div class="col-md-6">&nbsp;</div>
+
+                    <div class="col-md-6"><input type="button" class="btn btn-info btn-right" value="Add" /></div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <br />
+
+    <footer>
+
+        <p>Cuyahoga Community College</p>
+
+        <p>700 carnegle Avenue, Cleveland, Ohio 44115.</p>
+
+    </footer>
+
+</body>
 
 </html>
